# Noa505xHora

./: .gitignore  CMakeLists.txt  README.md  SESSION_NAME.txt  main.cpp  run-debug.bat
.atl/: skill-registry.md
.github/: ISSUE_TEMPLATE.md
documentacion/: .gitignore  505XHORA.md  AGENTS.md  Propuesta_Sistema_505XHORA.html  debug.txt
qml/: Theme.qml  main.qml  qml.qrc
qml/common/: CustomButton.qml  CustomCard.qml  CustomTextField.qml  NavigationBar.qml  StatusBadge.qml
qml/dialogs/: ConfirmDialog.qml  CuadreFinalDialog.qml  PrintDialog.qml
qml/modules/admin/: ConfigPage.qml  DashboardAdminPage.qml  ExpensesPage.qml  PayrollPage.qml  UserManagementPage.qml
qml/modules/commercial/: CommercialDashboardPage.qml  CommissionPage.qml  InvoicePage.qml  (+2 more)
qml/pages/: DashboardPage.qml  LoginPage.qml  ProfilePage.qml
qt_qml_skills/: INDEX_QT_QML_SKILLS.md  skill_qt_cpp_qml_integration.md  skill_qt_qml_architecture_patterns.md  skill_qt_qml_deployment.md  skill_qt_qml_fundamentos.md  skill_qt_qml_models_data.md  skill_qt_qml_multimedia_graphics.md  skill_qt_qml_networking_rest.md  skill_qt_qml_performance.md  skill_qt_qml_styling_theming.md  skill_qt_qml_testing_debugging.md
src/controllers/: AppController.cpp  AppController.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: Expense.cpp  Expense.h  Inventory.cpp  Inventory.h  Payroll.cpp  Payroll.h  Product.cpp  Product.h  Sale.cpp  Sale.h  User.cpp  User.h
src/services/: InventoryService.cpp  InventoryService.h  ReportService.cpp  ReportService.h
src/utils/: Constants.h  RoleEnums.h
(+19 files in other folders)
